src/test/ui/parser/issue-14303-path.stderr
error: lifetime arguments must be declared prior to type arguments
  --> $DIR/issue-14303-path.rs:10:40
   |
LL | fn bar<'a, 'b, 'c, T>(x: foo::X<'a, T, 'b, 'c>) {}
   |                                        ^^  ^^

error: aborting due to previous error

